# django-realtime-chat-app

./: pyproject.toml
project/chat/: consumer.py  routing.py
project/project/: asgi.py  settings.py
